# ChangeLog for dev-python/fusil
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/fusil/ChangeLog,v 1.9 2014/04/10 07:52:53 idella4 Exp $

*fusil-1.5 (10 Apr 2014)

  10 Apr 2014; Ian Delaney <idella4@gentoo.org> +fusil-1.5.ebuild,
  -fusil-1.3.2.ebuild, -fusil-1.4.ebuild:
  bump; add py3 pypy support and migration -> distutils-r1, rm old

  07 Jun 2012; Zac Medico <zmedico@gentoo.org> fusil-1.3.2.ebuild,
  fusil-1.4.ebuild:
  inherit user for enewgroup and enewuser

*fusil-1.4 (29 Jul 2011)

  29 Jul 2011; Sébastien Fabbro <bicatali@gentoo.org>
  +files/1.4-python25.patch, +fusil-1.4.ebuild:
  Version bump

  30 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  fusil-1.3.2.ebuild:
  Use PYTHON_DEPEND instead of NEED_PYTHON.

*fusil-1.3.2 (09 Jan 2010)

  09 Jan 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +fusil-1.3.2.ebuild:
  Version bump.

*fusil-1.3.1 (15 Nov 2009)

  15 Nov 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +fusil-1.3.1.ebuild:
  Version bump.

*fusil-1.3 (18 Sep 2009)

  18 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -fusil-1.2.1.ebuild, -fusil-1.2.1-r1.ebuild, +fusil-1.3.ebuild:
  Version bump. Set SUPPORT_PYTHON_ABIS.

*fusil-1.2.1-r1 (13 Jul 2009)

  13 Jul 2009; Jesus Rivero <neurogeek@gentoo.org> +fusil-1.2.1-r1.ebuild:
  Added USE flags for doc and examples. Closes bug #263582. Thanks to August
  for the patch.

*fusil-1.2.1 (28 Feb 2009)

  28 Feb 2009; Patrick Lauer <patrick@gentoo.org> +metadata.xml,
  +fusil-1.2.1.ebuild:
  Initial import. Fixes #247893. Ebuild contributed by Tuna <tuna@lyua.org>