@@ -3,13 +3,13 @@ Hash: SHA256
 
 AUX 1.4-python25.patch 313 SHA256 dd587a243c9d3c228423357322385280020700ae43743f7401faefca6062e602 SHA512 3a7f6f8a707af78cd7f0dd582ef206b3e7d656be2ad0bf507ea410b05bd158ee661a0713ab20506f9aa85af62a1bd93ffb33c9696c0fc7bc9b8e003f5f4cc417 WHIRLPOOL 5ca15f464eb6feba726f41924ccab24d16de19695c82268b1ed383e529209a33fa2a7d2e36d7aa536ea3d5f288429d41482d5cebde24ff9f911bf7836310fe11
 DIST fusil-1.5.tar.gz 138910 SHA256 1b6e269f47636b5fd1ddd25940aa1beaae68c05c076b3ad6bcef72db5865729b SHA512 0d84bfd2d9b8e509989723de26b30c3ec2824612dbdcc097ff3e998fd4efa6b1293cb78743e098ad5012d4981b8e8036f3ad3f9c6acf2dc30e3ff1f707c7d1c0 WHIRLPOOL d0747c9f53af8ccaa9155fa05726928b0a52b5cef6fc76f7ab38b3219ca3d1c82c396737de3427fe3129d257f91853659ea7f2ab158c31a4349b53d906c5121d
-EBUILD fusil-1.5.ebuild 1054 SHA256 217d433bdb2167e17ad2dee94610d2627c103f22b3a21e7c36ad8046466b81b2 SHA512 d348ddfd099664ec793d1555b0c34d38c135bdc4951d4919e30523ba961b530b2e0f284bdbc58b49fbe6df3b8d0e17e9e99b6f2603cc6a9253cbbf4b62cf40e4 WHIRLPOOL 76cbc06ff6ee535973977769f6ba27cf08ee7f6dfd7808d65c3c8a23061440ad4ac3222dd9ed8cb3fe436152bb88061b7c2258bda639931a6b8443f2f0400461
-MISC ChangeLog 1706 SHA256 41e0ae11ba00aabfb669f2743000ac0a4e19f4ce7048d6c66bb368445713b98a SHA512 2efa5cc05fc572b3a1c3722cba7438a6a6346c825192cbd4210ebcb47613765b19d79b7a568c3208750db4a988d7059f83de5ffb8265ff1edad8010c67ff5a83 WHIRLPOOL f6c6c004816821d25c37f224198ed6d1e444102bbfa4925a97cf141ece93be1769dcf16d8c6ff6007892f74cd9686d1560183f9e83c6c7a94e1b206bebf850d5
+EBUILD fusil-1.5.ebuild 1034 SHA256 5a7047bc8ea15dbfca301fbbda94dd1b5fd489b764c1ed6b08ad30f8192b01ab SHA512 15e3ff55ca4a64e9d4fdfc5ac1877b9e1a9b2479e864c32bd9fce8f2c3357cad2bb35288e0009ce881ab1fb346de816542936d46d5dacbb31b61a15d060bbe19 WHIRLPOOL 3349aab77ed2633585310dbd7f7ee34011a61fb2ed5d1a9d721549d185c4ab23a3354384794edfc01b7c537ab4fabb3fff27e351c2d02c2687ecccd33abdde35
+MISC ChangeLog 1795 SHA256 14eac1cd5b1fa7e633dea670caf377a282ed30f5c2670b9b1f8d02cd60c3ec54 SHA512 eddf697a58d923f700595dfb1f86698f7bc73a0ac5dee4ef3892b17bc0af5c4f14952a5616662e1ca64ef320c82cfd1e985465c2bb7a366e0123260437737d3a WHIRLPOOL e12b8cdb787046c7454b56a97d39c70f3cb2fbc340dff3385667b4c83fbc9845175911c6f90a415a6f0f802811aaa010bf9831575c0b7703bb6ead414de3bc09
 MISC metadata.xml 228 SHA256 4a1f4235aba4aa3315bc7fe1b79e76bb1931a1103d9e94521654a3aaca195b01 SHA512 0b29b0ada9fb4256008d740d4531d7a76aa85538d2c579a697192bcdb2c067824276ab07acf772271b403f151563e272fc7a2903ab91f75bd15929838898904b WHIRLPOOL 13a4f9ceafe4873ac6857c669bf4d1b48c537a91523e6616f29536281b3c6cdae6475d319e1531dfe05d3369b9ea05001a1436f757a1b82cb2a501464147fc03
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlNGTBwACgkQso7CE7gHKw36vACdEKvLueV1qrjHtjRoymFDNAeo
-RyAAoILB4dynFlWSKLhF+XSIsMW9cZkn
-=KoEf
+iEYEAREIAAYFAlOhaAUACgkQso7CE7gHKw2AJQCgsBhQd7+oxD6B9SNGdJ2XXdIw
+pw8AnRxiwPXCoXjRlY9NwkrCZ6J6H7A4
+=2b4v
 -----END PGP SIGNATURE-----
