@@ -1,9 +1,9 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/fusil/fusil-1.5.ebuild,v 1.1 2014/04/10 07:52:53 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/fusil/fusil-1.5.ebuild,v 1.2 2014/06/18 10:28:57 idella4 Exp $
 
 EAPI=5
-PYTHON_COMPAT=( python{2_7,3_3,3_4} pypy2_0 pypy )
+PYTHON_COMPAT=( python{2_7,3_3,3_4} pypy )
 
 inherit distutils-r1 user
 
@@ -16,10 +16,8 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE="doc examples"
 
-DEPEND=">=dev-python/python-ptrace-0.6[${PYTHON_USEDEP}]
-	doc? ( dev-python/docutils[${PYTHON_USEDEP}] )"
-
-RDEPEND="${DEPEND}"
+DEPEND="doc? ( dev-python/docutils[${PYTHON_USEDEP}] )"
+RDEPEND=">=dev-python/python-ptrace-0.7[${PYTHON_USEDEP}]"
 
 python_compile_all() {
 	use doc && emake -C doc RST2HTML="rst2html.py" || die "Generation of documentation failed"
