@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/fusil
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/fusil/ChangeLog,v 1.9 2014/04/10 07:52:53 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/fusil/ChangeLog,v 1.10 2014/06/18 10:28:57 idella4 Exp $
+
+  18 Jun 2014; Ian Delaney <idella4@gentoo.org> fusil-1.5.ebuild:
+  drop pypy2_0, tidy
 
 *fusil-1.5 (10 Apr 2014)
 
